Fix jump to bottom after post load on user profiles

--- a/monch_frontend/src/App.css
+++ b/monch_frontend/src/App.css
@@ -14,6 +14,7 @@ html, body #root {
   flex-grow: 1;
   justify-content: center;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
+  scroll-behavior: smooth;
 }
 
 .scroll-container {
